[package]
name = "Graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.13.1"
winit = "0.27.2"
pollster = "0.2.5"
bytemuck = { version = "1.11.0", features = ["derive"] }
cgmath = "0.18.0"
rand = "0.8.5"
parking_lot = "0.12.1"
tobj = { version = "3.2.3", features = [ "async" ] }
anyhow = "1.0.60"
raw-window-handle = "0.4.3"
wgpu-biolerless = { git = "https://github.com/terrarier2111/wgpu-boilerless", features = [] }

[dependencies.image]
version = "0.24.3"
default-features = false
features = ["png", "jpeg"]

[build-dependencies]
anyhow = "1.0.60"
fs_extra = "1.2.0"
glob = "0.3.0"

